# cookiecutter-poetry

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_root}}/: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
{{cookiecutter.project_root}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
