[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
description = ""
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
packages = [
    { include = "{{ cookiecutter.project_slug }}" }
]

[tool.poetry.scripts]
{{ cookiecutter.project_root }} = "{{ cookiecutter.project_root }}:main"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120

[tool.isort]
atomic = true
case_sensitive = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
order_by_type = true
profile = "black"
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
