[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
description = ""
authors = ["{{ cookiecutter.authot_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
packages = [
    { include = "{{ cookiecutter.project_slug }}" }
]

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}:main"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120

[tool.isort]
atomic = true
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
order_by_type = true
case_sensitive = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
